--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.bu9gb.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.vvs97.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
